# rsFETCH

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
src/: main.rs
